--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="We are Ikigai. A group of friends motivated by the land and sea. We pride ourselves on quality, respect and sustainability. Our aim is to share our passion of building superior underwater hunting equipment and systems, tested in the waters adjacent to where they are hand crafted right here in Far North Queensland Australia.">
     <meta name="keywords" content="Ikigai, marine, tinkers, owners, spearos, spearfishers, spearfishing, polespear, hunting, ocean, rubber, adventure, passion, fish, fishing, spear, freediving, diving, shooting, speargun, precision">
+    <link rel="shortcut icon" href="../img/icon.jpg">
     <!-- java -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
