--- a/pages/contact_us.html
+++ b/pages/contact_us.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content=" Feel free to send us a message so you can get to know us more. In case you hace suggestions, please let us know about them too. We want to keep on improving and making spearos have an unforgettable fishing experience">
     <meta name="keywords" content="Ikigai, marine, Contact, message, email, spearfishing, polespear, hunting, ocean, rubber, adventure, passion, fish, fishing, spear, freediving, diving, shooting, speargun, precision">
+    <link rel="shortcut icon" href="../img/icon.jpg">
     <!-- java -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
