--- a/pages/details.html
+++ b/pages/details.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="get to know how we created this pole spear. It was not only with passion but also with a lot or research. We want to give our customers a great experience to enhance and perfect their skills.">
     <meta name="keywords" content="Ikigai, marine, details, rubber, parts, carbonfibre, stainless, BOONDI, spearfishing, polespear, hunting, ocean, rubber, adventure, passion, fish, fishing, spear, freediving, diving, shooting, speargun, precision">
+    <link rel="shortcut icon" href="../img/icon.jpg">
     <!-- java -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
