--- a/pages/faq.html
+++ b/pages/faq.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content=" In this section, you will find questions and the answers that people usually ask about the spearfishing world. Get immersed in this, out world. ">
     <meta name="keywords" content="Ikigai, marine, questions, answers, information, FAQ, spearfishers, spearfishing, polespear, hunting, ocean, rubber, adventure, passion, fish, fishing, spear, freediving, diving, shooting, speargun, precision">
+    <link rel="shortcut icon" href="../img/icon.jpg">
     <!-- java -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
